syntax ="proto3";
option java_package="ma.enset.customerservice.web.grpc.stub";

message Customer {
  int64 id=1;
  string firstName=2;
  string lastName=3;
  string email=4;
}
service CustomerGrpcService {
  rpc getCustomer(GetCustomerRequest) returns (GetCustomerResponse);
  rpc getListCustomers(GetAllCustomersRequest) returns ( GetAllCustomersResponse);
  rpc saveCustomer(SaveCustomerRequest) returns (SaveCustomerResponse);
}
message GetCustomerRequest{
  int64 id=1;
}
message GetCustomerResponse{
  Customer customer=1;
}
message GetAllCustomersRequest {}
message GetAllCustomersResponse{
  repeated  Customer customers = 1;
}
message SaveCustomerRequest {
  string firstName=1;
  string lastName=2;
  string email=3;
}
message SaveCustomerResponse {
  Customer customer=1;
}